@@ -320,6 +320,14 @@ User ID for a job or job step.
 Reservation for the job.
 (Valid for jobs only)
 .TP
+\fB%w\fR
+Workload Characterization Key (wckey).
+(Valid for jobs only)
+.TP
+\fB%W\fR
+Licenses reserved for the job.
+(Valid for jobs only)
+.TP
 \fB%x\fR
 List of node names explicitly excluded by the job.
 (Valid for jobs only)
